# axum-todo

./: Cargo.toml  README.md  compose.yml
migrations/: 20250322015228_task.sql
scripts/: reset-db.sh
src/: handler.rs  main.rs
src/crates/application/: Cargo.toml
src/crates/application/src/: create_task.rs
src/crates/domain/: Cargo.toml
src/crates/domain/src/: lib.rs
src/crates/domain/src/entity/: task.rs
