[package]
name = "axum-todo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "json"] }
tokio = { version = "1.44.1", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version ="1.16.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = ['postgres', "uuid", "chrono", "runtime-tokio-native-tls"] }
chrono = { version = "0.4.40", features = ["serde"] }