[workspace]
members = [
    "src/crates/infrastructure",
    "src/crates/domain",
    "src/crates/application",
]
[package]
name = "axum-todo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
dotenv.workspace = true

infrastructure = { path = "./src/crates/infrastructure" }
domain = { path = "./src/crates/domain" }
application = { path = "./src/crates/application" }

[workspace.dependencies]
axum = { version = "0.8.1", features = ["macros", "json"] }
sqlx = { version = "0.8.3", features = ['postgres', "uuid", "chrono", "runtime-tokio-native-tls"] }
uuid = { version ="1.16.0", features = ["v4", "serde"] }
tokio = { version = "1.44.1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
chrono = { version = "0.4.40", features = ["serde"] }

[dev-dependencies]
tower = "0.5.2"